# Text-2-SQL

./: .env.example  LICENSE  app.py  config.py  middleware.py  pyproject.toml  readme.md  schemas.py
api/: __init__.py
api/api_v1/: views.py
certs/: jwt-private.pem  jwt-public.pem
db/: __init__.py  crud.py  db.py  db_helper.py  db_helpers.py  models.py
frontend/: frontend.py
frontend/static/: login.js  main.css  redirect.js  submit_prompt.js
frontend/templates/: index.html  login.html  redirect.html  submit_prompt.html
guardian/: __init__.py  bert_tuning.ipynb  dataset.csv  guardian.py
guardian/ruBERT_1.0acc/: config.json  model.safetensors
security/: __init__.py  admin_utils.py  auth.py  exceptions.py  helpers.py  privileges.sql  users.sql  utils.py  validation.py
sql_generator/: __init__.py  creation.sql  creation_commented.sql  sql_generator.py
static/: submit_prompt.js
templates/: index.html  submit_prompt.html  table.html
tests/: __init__.py  conftest.py  test_api_v1.py  test_db.py  test_guardian.py  test_security.py  test_sql_generator.py
