[project]
name = "text-2-sql"
version = "0.1.0"
description = "A web application that converts natural language to SQL using Pydantic AI for structured, type-safe LLM interactions, featuring a custom BERT-based security filter and FastAPI backend with MySQL integration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.3",
    "fastapi[standard]>=0.115.12",
    "pydantic-ai>=0.2.4",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.41",
    "transformers>=4.51.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
